backend/infrastructure/kubernetes/blog-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-api-deployment
  labels:
    app: blog-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-api
  template:
    metadata:
      labels:
        app: blog-api
    spec:
      containers:
        - name: blog-api
          image: contentria/blog-api:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
