backend/infrastructure/kubernetes/blog-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-frontend-deployment
  labels:
    app: blog-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-frontend
  template:
    metadata:
      labels:
        app: blog-frontend
    spec:
      containers:
        - name: blog-frontend
          image: contentria/blog-frontend:1.0
          imagePullPolicy: Never # 로컬 이미지 사용
          ports:
            - containerPort: 3000
