backend/infrastructure/kubernetes/blog-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend-service
  labels:
    app: blog-frontend
spec:
  type: ClusterIP   # 내부 통신용으로 변경
  selector:
    app: blog-frontend
  ports:
    - protocol: TCP
      port: 80          # Ingress가 바라볼 포트
      targetPort: 3000  # Next.js 컨테이너 포트
